fix integration test